--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^0.5.6
   rflutter_alert: ^1.0.3
   qrscan: ^0.2.17
+  path_provider: ^0.4.1
 
 dev_dependencies:
   flutter_test:
