--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="voting_demo"
+        android:label="Fresher Welcome 2020"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
