--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,19 @@ dependencies:
   shared_preferences: ^0.5.6
   rflutter_alert: ^1.0.3
   qrscan: ^0.2.17
-  path_provider: ^0.4.1
+  path_provider: ^1.5.1
 
 dev_dependencies:
+  flutter_launcher_icons:
+
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: 'assets/images/launcher.png'
+  android: true
+  ios: true
+
 
 
 # For information on the generic Dart part of this file, see the
